_sass/custom.scss
/*- Custom style -*/

// -- Put custom style under this point -- //
img + em { 
	margin-bottom: 1.5em;;
}

.disclaimer {
    font-size: 14px;
    margin-bottom: 1.5em;
    @media (min-width: 940px) {
        padding-left: 2.5em;
        padding-right: 2.5em;;
        margin-bottom: 1.3334em;
    }
}

